<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/myTheme"
    tools:context="com.example.dialogdemo.MainActivity">

    <TextView
        android:id="@+id/tvUITitle"
        style="@style/text"
        android:text="@string/titleString" />

    <Button
        android:id="@+id/btnQuit"
        style="@style/btn"
        android:text="@string/QuitButtonText"
        android:onClick="showAlertDialog"/>

    <TextView
        android:id="@+id/tvPickStyle"
        style="@style/text"
        android:text="@string/PickAStyle" />

    <Spinner
        android:id="@+id/spinner"
        style="@style/spinner"
        android:visibility="visible" />

    <Button
        android:id="@+id/btnPickADateSpinner"
        style="@style/btn"
        android:text="@string/DateButtonTextDefault"
        android:onClick="showDatePickerDialogSpinner" />

    <Button
        android:id="@+id/btnPickADateBuilderCalendar"
        style="@style/btn"
        android:text="@string/DateButtonTextBuilder"
        android:visibility="gone"
        android:onClick="showDatePickerDialogBuilderCalendar"/>

    <Button
        android:id="@+id/btnPickADateBuilderSpinner"
        style="@style/btn"
        android:text="@string/DateButtonTextBuilder"
        android:visibility="gone"
        android:onClick="showDatePickerDialogBuilderSpinner"/>

    <TextView
        android:id="@+id/tvDatePicked"
        style="@style/text"
        android:text="@string/dateSelected" />

</LinearLayout>
